# TestAssignmentProject

./: CMakeLists.txt  Curves.cpp  Curves.h  README.md  main.cpp
